downgrade to java 8 as it's difficult in GC app engine 11 to spawn threads